argocd/applications/mgmt/platform/nginx-router/manifests/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-router
  namespace: nginx-router
spec:
  type: NodePort
  selector:
    app: nginx-router
  ports:
  - name: http
    port: 80
    targetPort: 80
    nodePort: 30080
    protocol: TCP
  - name: https
    port: 443
    targetPort: 443
    nodePort: 30443
    protocol: TCP
  externalIPs:
    - 192.168.178.144
